# video-subtitle-generator

./: .gitignore  CLEAN_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICK_REFERENCE.md  README.md  README_zh_CN.md  TEST_RESULTS.md  analyze_subtitle.py  analyze_subtitle_diff.py  clean_reference_subtitle.py  clean_reference_subtitle_v2.py  fix_subtitles.py  pyproject.toml  pytest.ini  reqiurement-document.md  requirements.txt  start.bat  test_best_config.py  test_optimized.py  test_subtitle_generation.py  verify_result.py
docs/: ENCODING_FIX.md  FIX_SUMMARY.md  GPU_REQUIREMENTS.md  I18N_DESIGN.md
src/video_subtitle/: __init__.py  asr.py  audio.py  cache.py  cli.py  config.py  config_manager.py  gui.py  i18n.py  processor.py  subtitle.py
src/video_subtitle/locales/: en_US.json  zh_CN.json
tests/: __init__.py  test_asr.py  test_audio.py  test_cache.py  test_cli.py  test_config.py  test_config_manager.py  test_device_detection.py  test_gpu_fallback.py  test_integration.py  test_processor.py  test_subtitle.py
